--- a/src/app/all-products/filter/tables-filter/tables-filter.component.html
+++ b/src/app/all-products/filter/tables-filter/tables-filter.component.html
@@ -67,7 +67,7 @@
       <input type="text"
              id="maxTablesHeight"
              name="maxTablesHeight"
-             placeholder="from"
+             placeholder="to"
              formControlName="maxTablesHeight">
     </div>
   </fieldset>
