--- a/src/app/all-products/product/product.component.html
+++ b/src/app/all-products/product/product.component.html
@@ -6,9 +6,9 @@
    </div>
    <span>{{productName}}</span>
    <span>{{productType}}</span>
-   <span>цена: {{productPrice}} руб.</span>
+   <span>price: {{productPrice}} byn.</span>
    <div class="product-cover">
-     <button [routerLink]="[item.id]">Подробнее</button>
+     <button [routerLink]="[item.id]">Details</button>
    </div>
  </div>
 
