--- a/src/app/comparison/comparison.component.css
+++ b/src/app/comparison/comparison.component.css
@@ -29,6 +29,7 @@ app-comparison-item {
     margin-top: 30px;
     padding: 5px; }
     .comparison-block-message {
+      margin: 0 auto;
       font-weight: bold;
       font-size: 15px; }
     .comparison-block-characteristics {
