--- a/src/app/comparison/comparison.component.html
+++ b/src/app/comparison/comparison.component.html
@@ -1,7 +1,7 @@
 <div class="comparison">
   <div class="comparison-block">
     <ng-container *ngIf="!infoToShow.length">
-      <div class="comparison-block-message">Добавьте продукты для сравнения!</div>
+      <div class="comparison-block-message">Add products to compare!</div>
     </ng-container>
 
     <div class="comparison-block-characteristics">
