--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,21 +9,21 @@
 
   <div class="main-caption">
     <div class="main-cent">
-      <h2>Категории</h2>
+      <h2>Categories</h2>
     </div>
   </div>
 
   <div class="main-categories">
     <div class="main-cent js-content">
-      <div class="main-categories-sofa" routerLink="sofas">
+      <div class="main-categories-sofa" routerLink="products/sofas">
         <img src="./assets/home/категория_диван.png" alt="">
       </div>
 
-      <div class="main-categories-chair" routerLink="chairs">
+      <div class="main-categories-chair" routerLink="products/chairs">
         <img src="./assets/home/категория_кресло.jpg" alt="">
       </div>
 
-      <div class="main-categories-table" routerLink="tables">
+      <div class="main-categories-table" routerLink="products/tables">
         <img src="./assets/home/категория_стол.jpg" alt="">
       </div>
     </div>
