--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,9 @@
         (ngSubmit)="done()">
 
     <fieldset formGroupName="info" class="sign-up-info">
-      <legend>Заполните информацию о себе</legend>
+      <legend>Add information about yourself</legend>
       <div class="sign-up-info-name">
-        <label for="infoName">Имя: </label>
+        <label for="infoName">Name: </label>
         <input id="infoName"
                type="text"
                name="infoName"
@@ -14,13 +14,15 @@
 
       <div *ngIf="_infoName.invalid && (_infoName.touched || _infoName.dirty)"
            class="sign-up-info-validation">
-        <span *ngIf="_infoName?.errors.required">Обязательное поле!!!</span>
-        <span *ngIf="_infoName?.errors.minlength">Минимальная длина имени равна {{_infoName?.errors.minlength.requiredLength}} символам!!!</span>
-        <span *ngIf="_infoName?.errors.pattern">Разрешаются только буквы!!!</span>
+        <span *ngIf="_infoName?.errors.required">Required field!!!</span>
+        <span
+          *ngIf="_infoName?.errors.minlength">The minimum name length is {{_infoName?.errors.minlength.requiredLength}}
+          symbols!!!</span>
+        <span *ngIf="_infoName?.errors.pattern">Only letters are allowed !!!</span>
       </div>
 
       <div class="sign-up-info-surname">
-        <label for="infoSurname">Фамилия: </label>
+        <label for="infoSurname">Surname: </label>
         <input id="infoSurname"
                type="text"
                name="infoSurname"
@@ -29,9 +31,11 @@
 
       <div *ngIf="_infoSurname.invalid && (_infoSurname.touched || _infoSurname.dirty)"
            class="sign-up-info-validation">
-        <span *ngIf="_infoSurname?.errors.required">Обязательное поле!!!</span>
-        <span *ngIf="_infoSurname?.errors.minlength">Минимальная длина фамилии равна {{_infoSurname?.errors.minlength.requiredLength}} символам!!!</span>
-        <span *ngIf="_infoSurname?.errors.pattern">Разрешаются только буквы!!!</span>
+        <span *ngIf="_infoSurname?.errors.required">Required field!!!</span>
+        <span
+          *ngIf="_infoSurname?.errors.minlength">The minimum surname length is {{_infoSurname?.errors.minlength.requiredLength}}
+          symbols!!!</span>
+        <span *ngIf="_infoSurname?.errors.pattern">Only letters are allowed !!!</span>
       </div>
 
       <div class="sign-up-info-mail">
@@ -44,12 +48,12 @@
 
       <div *ngIf="_infoEmail.invalid && (_infoEmail.touched || _infoEmail.dirty)"
            class="sign-up-info-validation">
-        <span *ngIf="_infoEmail?.errors.required">Обязательное поле!!!</span>
-        <span *ngIf="_infoEmail?.errors.email">Почтовый ящик введен не верно!!!</span>
+        <span *ngIf="_infoEmail?.errors.required">Required field!!!</span>
+        <span *ngIf="_infoEmail?.errors.email">Email is incorrect!!!</span>
       </div>
 
       <div class="sign-up-info-phone">
-        <label for="infoPhone">Телефон: </label>
+        <label for="infoPhone">Phone: </label>
         <input id="infoPhone"
                type="tel"
                name="infoPhone"
@@ -58,14 +62,15 @@
 
       <div *ngIf="_infoPhone.invalid && (_infoPhone.touched || _infoPhone.dirty)"
            class="sign-up-info-validation">
-        <span *ngIf="_infoPhone?.errors.required">Обязательное поле!!!</span>
-        <span *ngIf="_infoPhone?.errors.pattern">Формат телефона (пробелы могут быть в следующих местах):<br>+375 __ _______!!!</span>
+        <span *ngIf="_infoPhone?.errors.required">Required field!!!</span>
+        <span *ngIf="_infoPhone?.errors.pattern">Phone format (spaces can be in the following places):<br>+375 __ _______!!!</span>
       </div>
     </fieldset>
 
-
     <button class="sign-up-button"
             type="submit"
-            [disabled]="signupForm.invalid">Зарегистрироваться</button>
+            [disabled]="signupForm.invalid">Done
+    </button>
+
   </form>
 </div>
