--- a/src/app/user-account/user-account.component.html
+++ b/src/app/user-account/user-account.component.html
@@ -2,8 +2,8 @@
   <div class="account-cent">
 
     <div class="account-cent-buttons">
-      <button (click)="goToUser()">о пользователе</button>
-      <button (click)="goToOrders()">заказы</button>
+      <button (click)="goToUser()">about user</button>
+      <button (click)="goToOrders()">orders</button>
     </div>
 
     <div class="account-cent-info">
