--- a/src/app/all-products/about-product/about-product.component.scss
+++ b/src/app/all-products/about-product/about-product.component.scss
@@ -81,14 +81,18 @@
 
     &-img {
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      align-items: center;
       width: 700px;
-      height: 400px;
+      height: 500px;
       flex-shrink: 0;
+      overflow: hidden;
 
       img {
         display: block;
-        max-width: 100%;
+        width: 60%;
+       /* max-width: 100%;*/
         max-height: 100%;
       }
     }
@@ -203,23 +207,62 @@
   }
 }
 
-@media screen and (max-width: 971px){
+.unvisible {
+  display: none;
+}
+
+/*.popup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  max-width: 100%;
+  height: 100%;
+  background-color: #15004a;
+  opacity: .95;
+  top: 0;
+  left: 0;
+  line-height: 100vh;
+
+  &-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    width: 50%;
+    height: 50%;
+    opacity: 1;
+    padding: 10px;
+    background-color: white;
+    line-height: 25px;
+
+     &-text {
+       text-align: center;
+       font-size: 20px;
+       font-weight: bold;
+       color: black;
+     }
+
+    &-img {
+      position: absolute;
+      top: -25px;
+      right: -25px;
+    }
+  }
+}*/
+
+@media screen and (max-width: 971px) {
   .about-product-main-content-img {
     width: 550px;
-    height: 250px;
+    height: 350px;
   }
 }
 
-@media screen and (max-width: 825px){
+@media screen and (max-width: 825px) {
   .about-product-main-content {
     flex-direction: column;
     align-items: center;
-
-    &-img {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
 
     &-info {
       text-align: center;
@@ -242,12 +285,10 @@
 
   .about-product-characteristics-info-item-points {
     width: 60%;
-
   }
 
   .about-product-characteristics-info-item-values {
     width: 40%;
-
   }
 }
 
@@ -261,20 +302,9 @@
   .about-product-main-content {
     &-img {
       width: 300px;
-      height: 150px;
+      height: 200px;
     }
   }
-
- /* .about-sofa-characteristics-info-points {
-    flex-shrink: 0;
-  }*/
-}
-
-@media screen and (max-width: 365px) {
- /* .about-sofa-characteristics-info-points {
-    flex-shrink: 1;
-    min-width: 210px;
-  }*/
 }
 
 [disabled] {
