--- a/src/app/all-products/product/product.component.scss
+++ b/src/app/all-products/product/product.component.scss
@@ -34,7 +34,7 @@
       transform: scale(1);
       width: 100%;
       height: 100%;
-      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
       opacity: .95;
     }
   }
