--- a/src/app/basket/basket-item/basket-item.component.scss
+++ b/src/app/basket/basket-item/basket-item.component.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 35px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   padding: 40px;
 
   &-info {
@@ -49,7 +49,7 @@
 
     }
 
-    &-amount{
+    &-amount {
       display: flex;
 
       &-minus,
@@ -80,19 +80,19 @@
   }
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 650px) {
   .basket-item-info {
     margin-right: 5px;
   }
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   .basket-item {
     padding: 10px;
   }
 }
 
-@media screen and (max-width: 440px){
+@media screen and (max-width: 440px) {
   .basket-item-control-amount {
     div {
       padding: 3px;
