--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,29 +1,30 @@
 <ng-container *ngIf="basketProducts?.length">
-<div class="basket">
-  <div class="basket-products">
-    <app-basket-item *ngFor="let item of basketProducts"
-                     [(productsInBasket)]="basketProducts"
-                     [item]="item"
-                     [email]="email"
-                     [userId]="userId"
-                     [docId]="docId"
-                     [(total)]="totalCost" ></app-basket-item>
-  </div>
+  <div class="basket">
+    <div class="basket-products">
+      <app-basket-item *ngFor="let item of basketProducts"
+                       [(productsInBasket)]="basketProducts"
+                       [item]="item"
+                       [email]="email"
+                       [userId]="userId"
+                       [docId]="docId"
+                       [(total)]="totalCost"></app-basket-item>
+    </div>
 
-  <div class="basket-info" [hidden]="!basketProducts.length">
-    <div class="basket-info-container">
-      <div>Total cost:</div>
-      <div class="basket-info-container-total-cost">{{totalCost}} byn.</div>
-      <button class="basket-info-container-place-an-order"
-              routerLink="/order"
-              [routerLinkActiveOptions]="{exact:true}"
-              routerLinkActive="active"
-              [disabled]="!email">Order</button>
+    <div class="basket-info" [hidden]="!basketProducts.length">
+      <div class="basket-info-container">
+        <div>Total cost:</div>
+        <div class="basket-info-container-total-cost">{{totalCost}} byn.</div>
+        <button class="basket-info-container-place-an-order"
+                routerLink="/order"
+                [routerLinkActiveOptions]="{exact:true}"
+                routerLinkActive="active"
+                [disabled]="!email">Order
+        </button>
+      </div>
     </div>
   </div>
-</div>
 </ng-container>
 
 <ng-container *ngIf="!basketProducts?.length">
-  <div style="text-align: center; font-size: 20px">Ваша корзина пуста!!!</div>
+  <div style="text-align: center; font-size: 20px">Your basket is empty!!!</div>
 </ng-container>
