--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,6 +8,7 @@
     display: flex;
     margin-bottom: 30px; }
     .sign-up-info-name label, .sign-up-info-mail label, .sign-up-info-surname label, .sign-up-info-phone label {
+      flex-shrink: 0;
       width: 80px;
       display: inline-block;
       padding: 5px;
