--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -15,6 +15,7 @@
       margin-bottom: 30px;
 
       label {
+        flex-shrink: 0;
         width: 80px;
         display: inline-block;
         padding: 5px;
