--- a/src/app/order/order.component.css
+++ b/src/app/order/order.component.css
@@ -2,17 +2,18 @@
   width: 100%;
   max-width: 900px;
   margin: 0 auto; }
-  .order-customer-info-name, .order-customer-info-mail, .order-customer-info-phone {
+  .order-customer-info-name, .order-customer-info-surname, .order-customer-info-mail, .order-customer-info-phone {
     width: 100%;
     display: flex;
     margin-bottom: 30px; }
-    .order-customer-info-name label, .order-customer-info-mail label, .order-customer-info-phone label {
+    .order-customer-info-name label, .order-customer-info-surname label, .order-customer-info-mail label, .order-customer-info-phone label {
+      flex-shrink: 0;
       width: 80px;
       display: inline-block;
       padding: 5px;
       margin-right: 10px;
       text-align: right; }
-    .order-customer-info-name input, .order-customer-info-mail input, .order-customer-info-phone input {
+    .order-customer-info-name input, .order-customer-info-surname input, .order-customer-info-mail input, .order-customer-info-phone input {
       display: block;
       width: 100%;
       max-width: 400px;
