--- a/src/app/order/order.component.scss
+++ b/src/app/order/order.component.scss
@@ -6,6 +6,7 @@
   &-customer-info {
 
     &-name,
+    &-surname,
     &-mail,
     &-phone {
       width: 100%;
@@ -13,6 +14,7 @@
       margin-bottom: 30px;
 
       label {
+        flex-shrink: 0;
         width: 80px;
         display: inline-block;
         padding: 5px;
