--- a/src/app/user-account/about-user/about-user.component.html
+++ b/src/app/user-account/about-user/about-user.component.html
@@ -1,10 +1,10 @@
 <div class="about-user">
   <div class="about-user-cent">
     <div class="about-user-cent-info">
-      <p>Имя пользователья: {{userInfo.infoName}}</p>
-      <p>Фамилия пользователя: {{userInfo.infoSurname}}</p>
-      <p>Мобильный телефон: {{userInfo.infoPhone}}</p>
-      <p>Почтовый ящик: {{userInfo.infoEmail}}</p>
+      <p>User name: {{userInfo.infoName}}</p>
+      <p>User surname: {{userInfo.infoSurname}}</p>
+      <p>Mobile phone: {{userInfo.infoPhone}}</p>
+      <p>E-mail: {{userInfo.infoEmail}}</p>
     </div>
   </div>
 </div>
