--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,13 @@
 * {
   box-sizing: border-box;
+  font-family: 'Unna', sans-serif;
 }
+
 
 .body {
   width: 100%;
 }
+
 app-root {
   display: flex;
   flex-direction: column;
@@ -23,3 +26,43 @@ h1 {
   line-height: 1.2em;
 }
 
+.popup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #15004a;
+  opacity: .95;
+  top: 0;
+  left: 0;
+  line-height: 100vh;
+
+  &-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    width: 50%;
+    height: 50%;
+    opacity: 1;
+    padding: 10px;
+    background-color: white;
+    line-height: 25px;
+
+    &-text {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: black;
+    }
+
+    &-img {
+      position: absolute;
+      top: -25px;
+      right: -25px;
+    }
+  }
+}
