--- a/src/app/all-products/about-product/about-product.component.css
+++ b/src/app/all-products/about-product/about-product.component.css
@@ -141,21 +141,20 @@
 .unvisible {
   display: none; }
 
-/*.popup {
+.popup {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: fixed;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   background-color: #15004a;
   opacity: .95;
   top: 0;
   left: 0;
-  line-height: 100vh;
-
-  &-message {
+  line-height: 100vh; }
+  .popup-message {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -165,22 +164,24 @@
     opacity: 1;
     padding: 10px;
     background-color: white;
-    line-height: 25px;
-
-     &-text {
-       text-align: center;
-       font-size: 20px;
-       font-weight: bold;
-       color: black;
-     }
-
-    &-img {
+    line-height: 25px; }
+    .popup-message-text {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: black; }
+    .popup-message-img {
       position: absolute;
-      top: -25px;
-      right: -25px;
-    }
-  }
-}*/
+      width: 40px;
+      height: 40px;
+      top: 0;
+      right: 0;
+      overflow: hidden; }
+      .popup-message-img img {
+        display: block;
+        width: 100%;
+        height: 100%; }
+
 @media screen and (max-width: 971px) {
   .about-product-main-content-img {
     width: 550px;
