--- a/src/app/all-products/about-product/about-product.component.scss
+++ b/src/app/all-products/about-product/about-product.component.scss
@@ -211,13 +211,13 @@
   display: none;
 }
 
-/*.popup {
+.popup {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: fixed;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   background-color: #15004a;
   opacity: .95;
@@ -246,11 +246,21 @@
 
     &-img {
       position: absolute;
-      top: -25px;
-      right: -25px;
+      width: 40px;
+      height: 40px;
+      top: 0;
+      right: 0;
+      overflow: hidden;
+
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+
+      }
     }
   }
-}*/
+}
 
 @media screen and (max-width: 971px) {
   .about-product-main-content-img {
