--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-// для header
 @import '../../styles/variables.scss';
 
 .header {
@@ -23,12 +22,17 @@
   flex-shrink: 0;
   width: 30px;
   height: 30px;
+  margin-left: 5px;
   font-size: 20px;
 
   img {
     display: block;
     width: 100%;
     height: 100%;
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
 
@@ -63,6 +67,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin: 0 10px 0 auto;
 
   &-basket {
     position: relative;
@@ -95,6 +100,10 @@
       display: block;
       width: 100%;
       height: 100%;
+    }
+
+    &:hover {
+      cursor: pointer;
     }
   }
 }
