--- a/src/app/comparison/comparison-item/comparison-item.component.css
+++ b/src/app/comparison/comparison-item/comparison-item.component.css
@@ -8,12 +8,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 150px;
   padding: 10px; }
   .comparison-item-point-img img {
     display: block;
-    width: 100%;
+    width: 50%;
     max-height: 100%; }
 
 @media screen and (max-width: 700px) {
