--- a/src/app/comparison/comparison-item/comparison-item.component.scss
+++ b/src/app/comparison/comparison-item/comparison-item.component.scss
@@ -11,13 +11,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 150px;
   padding: 10px;
 
   img {
     display: block;
-    width: 100%;
+    width: 50%;
     max-height: 100%;
   }
 }
